--- a/theme.css
+++ b/theme.css
@@ -80,6 +80,9 @@ html, body{
 .resort-image{
     width: 100%
 }
+iframe {
+    width: 100%
+}
 
 @media only screen and (max-width: 600px) {
     .heading {
